--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -36,8 +36,8 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" name= type="text" placeholder="1/11/2011">
+                        <label for="sighting_date">Enter a Date between Jan 1st, 2010 to Jan13th, 2010</label>
+                        <input class="sighting_date" id="datetime" name= "sighting_date" type="date" class="form-control">
                     </form>
                 <form id="form2">
                   <div class="form-group">
